--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,13 +1,11 @@
 name: Rust Detector Scraper
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '45 20 26 1 *'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
