--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1'  # or the version you are using
+          dotnet-version: '8.0' 
 
       - name: Build Backend (ASP.NET Core)
         run: |
@@ -35,7 +35,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1'  # or the version you are using
+          dotnet-version: '8.0'
 
       - name: Publish Backend (ASP.NET Core)
         run: |
