--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,13 @@ jobs:
       - name: Publish Backend (ASP.NET Core)
         run: |
           cd RustDetector.api
-          dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+          dotnet publish -c Release -o bin/Release/net8.0/publish
 
       - name: Upload artifact for backend deployment
         uses: actions/upload-artifact@v2
         with:
           name: backend-artifact
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ./RustDetector.api/bin/Release/net8.0/publish
 
   deploy:
     runs-on: windows-latest
@@ -76,7 +76,7 @@ jobs:
       - name: Publish Frontend (Blazor Web App)
         run: |
           cd RustDetector.blazor
-          dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/blazorapp
+          dotnet publish -c Release -o bin/Release/net8.0/publish
 
       - name: Deploy Frontend to Azure Web App
         uses: azure/webapps-deploy@v2
