--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy ASP.NET Core and Blazor Web App
+name: Build and Deploy ASP.NET Core and Blazor Server App
 
 on:
   push:
@@ -27,7 +27,7 @@ jobs:
       - name: Publish Backend (ASP.NET Core)
         run: |
           cd RustDetector.api
-          dotnet publish -c Release -o bin/Release/net8.0/publish
+          dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/backend
 
       - name: Upload artifact for backend deployment
         uses: actions/upload-artifact@v2
@@ -63,20 +63,20 @@ jobs:
         with:
           node-version: '14'
 
-      - name: Install dependencies for Frontend (Blazor Web App)
+      - name: Install dependencies for Frontend (Blazor Server App)
         run: |
           cd RustDetector.blazor
           npm install
 
-      - name: Build Frontend (Blazor Web App)
+      - name: Build Frontend (Blazor Server App)
         run: |
           cd RustDetector.blazor
           dotnet build
 
-      - name: Publish Frontend (Blazor Web App)
+      - name: Publish Frontend (Blazor Server App)
         run: |
           cd RustDetector.blazor
-          dotnet publish -c Release -o bin/Release/net8.0/publish
+          dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/frontend
 
       - name: Deploy Frontend to Azure Web App
         uses: azure/webapps-deploy@v2
