--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           cd RustDetector.api
           echo "Contents of the directory before publish:"
           ls ${{env.DOTNET_ROOT}}
-          dotnet publish RustDetector.api.csproj -c Release -o ${{env.DOTNET_ROOT}}/backend
+          dotnet publish RustDetector.api.csproj -c Release -o D:\a\rust-detector\rust-detector\backend
           echo "Contents of the directory after publish:"
           ls ${{env.DOTNET_ROOT}}
 
@@ -38,7 +38,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: backend-artifact
-          path: ${{env.DOTNET_ROOT}}/backend
+          path: D:\a\rust-detector\rust-detector\backend
 
       - name: dotnet build Frontend (Blazor Server App)
         run: |
@@ -48,13 +48,13 @@ jobs:
 
       - name: dotnet publish Frontend (Blazor Server App)
         run: |
-          dotnet publish ./RustDetector.blazor/RustDetector.blazor.csproj -c Release -o /frontend
+          dotnet publish ./RustDetector.blazor/RustDetector.blazor.csproj -c Release -o D:\a\rust-detector\rust-detector\frontend
 
       - name: Upload frontend artifact for deployment
         uses: actions/upload-artifact@v2
         with:
           name: frontend-artifact
-          path: /frontend
+          path: D:\a\rust-detector\rust-detector\frontend
 
   deploy:
     runs-on: windows-latest
@@ -77,7 +77,7 @@ jobs:
         with:
           app-name: 'rustdetector'
           slot-name: 'Production'
-          package: /backend
+          package: D:\a\rust-detector\rust-detector\backend
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D3196DCE27274553A3C438185ECE00E7 }}
 
       - name: Download Frontend artifact
@@ -90,5 +90,5 @@ jobs:
         with:
           app-name: 'rustdetector'
           slot-name: 'Production'
-          package: /frontend
+          package: D:\a\rust-detector\rust-detector\frontend
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D3196DCE27274553A3C438185ECE00E7 }}
