--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,11 +84,19 @@ jobs:
           package: D:\a\rust-detector\rust-detector
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D3196DCE27274553A3C438185ECE00E7 }}
 
+      - name: Logging root pre-download
+        run: |
+          ls .
+          
       - name: Download Frontend artifact
         uses: actions/download-artifact@v2
         with:
           name: frontend-artifact
 
+      - name: Logging root post-download
+        run: |
+          ls .
+          
       - name: Deploy Frontend to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
