--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -20,9 +20,9 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Replace with your dependencies file
+        pip install -r requirements.txt
 
-    - name: Check if it's the last day of the month
+    - name: Check if it is the last day of the month
       run: |
         if [ $(date +\%d -d tomorrow) -eq 1 ]; then
           python rust-detector.py
